# nba-most-engaging-game-of-the-week

./: .coveragerc  .env.example  .gitignore  .railwayignore  Procfile  README.md  claude.md  config.yaml  example_usage.py  project-log.md  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements.txt  run.sh  run_api.sh  run_cli.sh  run_web.sh  test_balldontlie.py  test_cache.py  todo.md
.github/workflows/: README.md  cd.yml  ci.yml
data/: nba_games.db
scripts/: clear_cache.py
src/: __init__.py
src/api/: balldontlie_client.py  nba_api_client.py  nba_client.py
src/core/: game_scorer.py  recommender.py
src/interfaces/: api_server.py  cli.py  sync_cli.py
src/interfaces/web/: app.py
src/interfaces/web/templates/: index.html  trmnl_viewer.html
src/services/: __init__.py  game_service.py
src/utils/: cache.py  database.py  logger.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_api_server.py  test_cli.py
tests/unit/: test_cache.py  test_database.py  test_game_scorer.py  test_nba_api_client.py  test_nba_client.py  test_recommender.py
trmnl/: .trmnlp.yml  README.md
trmnl/src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml  shared.liquid
